fix color of visited `a` tag in dialog when dark mode

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -99,6 +99,10 @@ h6 {
     visibility: hidden;
     opacity: 0;
     transition: all 0.3s;
+
+    a:visited {
+      color: inherit;
+    }
   }
 
   &:focus-within {
